Resolves: tdf#129250 move redline type into RedlinData so we can sort on it

Change-Id: Ia8e6744c1679655240a9a9cee9425030e994e16b